--- a/.github/workflows/switchScript.yml
+++ b/.github/workflows/switchScript.yml
@@ -11,7 +11,7 @@ on:
       - '#switchScript.sh'
       
   schedule:
-    - cron: 0 4 * * *
+    - cron: 0 10 * * *
 
 env:
   SCRIPT_SH: ./.github/workflows/switchScript.sh
@@ -33,6 +33,8 @@ jobs:
         sudo -E apt install -y jq
 
     - name: "Build & Release"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         echo "DATE=$(date "+%Y%m%d %H:%M:%S")" >> $GITHUB_ENV
         echo "tag_name=$(date +%Y%m%d)" >> $GITHUB_ENV
