--- a/.github/workflows/switchScript_ZDM-Tesla.yml
+++ b/.github/workflows/switchScript_ZDM-Tesla.yml
@@ -33,6 +33,8 @@ jobs:
         sudo -E apt install -y jq
 
     - name: "Build & Release"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         echo "DATE=$(date "+%Y%m%d %H:%M:%S")" >> $GITHUB_ENV
         echo "tag_name=$(date +%Y%m%d)" >> $GITHUB_ENV
