--- a/.github/workflows/switchScript.yml
+++ b/.github/workflows/switchScript.yml
@@ -40,7 +40,7 @@ jobs:
         echo "tag_name=$(date +%Y%m%d)" >> $GITHUB_ENV
         chmod +x $SCRIPT_SH
         ./$SCRIPT_SH
-        zip -rq SwitchSD.zip SwitchSD
+        zip -rq SwitchSD.zip SwitchSD -z < description.txt
 
     - name: Read description.txt
       id: description
